<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.eclipse.paho</groupId>
		<artifactId>java-parent</artifactId>
		<version>1.2.1-SNAPSHOT</version>
	</parent>

	<artifactId>org.eclipse.paho.mqttv5.common</artifactId>
	<name>org.eclipse.paho.mqttv5.common</name>


	<dependencies>
	<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
 				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
	      <artifactId>maven-compiler-plugin</artifactId>
	      <version>3.7.0</version>
	      <configuration>
	        <source>1.8</source>
          <target>1.8</target>
	     </configuration>
			</plugin>
		</plugins>
	</build>
</project>
